src/test/deca/syntax/invalid/resultats/test23_if-synt.res
./src/test/deca/syntax/invalid/test23_if.deca:17:2: missing '{' at 'i'
